--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ section {
 
 /* Cada bloque de servicio */
 .servicio {
-    background-color: #222;
+    background-color: #6683f4;
     padding: 20px;
     border-radius: 8px;
 }
