--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ section h2 {
 /* Cada servicio individual */
 .servicio,
 .m3u8, .asesoria, .llavesiks, .licenciastra {
-    background-color: #1f1f1f;
+    background-color: #1cf396;
     padding: 20px;
     border-radius: 10px;
     border-left: 5px solid #00c3ff;
