--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ section h2 {
 }
 
 .servicio {
-    background-color: #1e1e1e;
+    background-color: #403f3f;
     padding: 20px;
     border-radius: 8px;
     border-left: 5px solid #00c3ff;
