--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ footer {
 
 /* Estilo para el logo */
 .logo {
-    width: 10%;           /* Ajusta el tamaño según tu logo */
+    width: 10px;           /* Ajusta el tamaño según tu logo */
     height: auto;
     display: block;
     margin: 0 auto 10px;    /* Centrado arriba del título */
