--- a/css/style.css
+++ b/css/style.css
@@ -61,18 +61,13 @@ section h2 {
     border-left: 5px solid #00c3ff;
     transition: transform 0.3s;
     color: #fff;
-    text-decoration: none;
+    text-decoration: none; /* <- evita subrayado */
     display: block;
 }
 
 .servicio:hover {
     transform: scale(1.03);
     background-color: #2b2b2b;
-}
-
-
-.servicio:hover {
-    transform: scale(1.03);
 }
 
 /* Contacto */
@@ -92,5 +87,3 @@ footer {
     font-size: 0.9em;
     color: #aaa;
 }
-
-/* Estilo para el logo */
