--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Playfair Display', serif;
-    background-color: #101010;
+    background: linear-gradient(to bottom, #101010, #0a0f1c);
+
     color: #f5f5f5;
 }
 
